[package]
name = "restcrab"
version = "0.2.0"
edition = "2021"
authors = [ "Paul Volavsek <paul.volavsek@gmail.com>" ]
license = "MIT"
description = "Procedural macro to automatically generate a REST client from a trait definition."
repository = "https://github.com/volllly/restcrab"
readme = "./README.md"
documentation = "https://docs.rs/restcrab/"
keywords = ["rest", "restclient", "client", "macro", "serde"]

[features]
default = [ "reqwest" ]
reqwest = [ "reqwest_lib", "serde_json" ]

[dependencies]
restcrab_macros = { path = "../restcrab_macros", version = "0.2" }
serde = "1.0"
http = "0.2"
reqwest_lib = { package = "reqwest", version = "0.11", features = [ "blocking" ], optional = true }
snafu = "0.7"
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
async-std = { version = "1.12", features = [ "attributes" ] }
fake = "2.5.0"
wiremock = "0.5.16"

[lib]
name = "restcrab"
path = "src/lib.rs"