[package]
name = "restcrab_macros"
version = "0.1.0"
edition = "2018"
authors = [ "Paul Volavsek <paul.volavsek@gmail.com>" ]
license = "MIT"
description = "TODO"
repository = "https://github.com/volllly/restcrab"
readme = "README.md"
documentation = "https://docs.rs/restcrab/"

[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
http = "0.2"
snafu = "0.6"

[dev-dependencies]
restcrab = { path = "../restcrab", version = "0.1", features = [ "reqwest" ] }
serde = "1.0"

[lib]
proc-macro = true

[[test]]
name = "test"
path = "test/tests.rs"
