[package]
name = "restcrab_macros"
version = "0.1.2"
edition = "2021"
authors = [ "Paul Volavsek <paul.volavsek@gmail.com>" ]
license = "MIT"
description = "Macros for the restcrab crate"
repository = "https://github.com/volllly/restcrab"
documentation = "https://docs.rs/restcrab/"

[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
http = "0.2"
snafu = "0.7"

[dev-dependencies]
restcrab = { path = "../restcrab", features = [ "reqwest" ] }
serde = { version = "1.0", features = [ "derive" ] }

[lib]
name = "restcrab_macros"
path = "src/lib.rs"
proc-macro = true

[[test]]
name = "test"
path = "test/tests.rs"
