[package]
name = "restcrab_macros"
version = "0.2.0"
edition = "2021"
authors = [ "Paul Volavsek <paul.volavsek@gmail.com>" ]
license = "MIT"
description = "Macros for the restcrab crate"
repository = "https://github.com/volllly/restcrab"
documentation = "https://docs.rs/restcrab/"

[dependencies]
darling = "0.14"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
http = "1.0"
snafu = "0.8"
regex = "1.8.1"

[dev-dependencies]
restcrab = { path = "../restcrab", features = [ "reqwest" ] }
serde = { version = "1.0", features = [ "derive" ] }

[lib]
name = "restcrab_macros"
path = "src/lib.rs"
proc-macro = true

[[test]]
name = "test"
path = "test/tests.rs"
